# 2-

./: README_cn.md  信息.txt  小车节点.txt  架构.txt
racing_ws/: .gitignore
racing_ws/config/: obstacles.list  yolov5sconfig.json  yolov8.json
racing_ws/docs/: project_overview.md
racing_ws/src/cart/: package.xml  setup.py
racing_ws/src/cart/config/: backpack_2d.lua
racing_ws/src/cart/launch/: 2d_slam.launch.py
racing_ws/src/cart/rviz/: cartographer.rviz  slam.rviz
racing_ws/src/globalplanner/: origincar_globalplanner.cpp
racing_ws/src/qr_detector/: package.xml  setup.cfg  setup.py
racing_ws/src/qr_detector/qr_detector/: qr_detector_node.py
racing_ws/src/qr_detector_cpp/qr_detector_cpp/: CMakeLists.txt  README.md  package.xml
racing_ws/src/qr_detector_cpp/qr_detector_cpp/src/: qr_detector.cpp
racing_ws/src/qwen_pic_to_text/: package.xml  setup.cfg  setup.py
racing_ws/src/qwen_pic_to_text/qwen_pic_to_text/: qwen_pic_to_text_node.py
racing_ws/src/racing_mission/: package.xml  setup.cfg  setup.py
racing_ws/src/racing_mission/launch/: mission_autorun.launch.py
racing_ws/src/racing_mission/racing_mission/: mission_orchestrator_node.py  scene_state_guard_node.py  track_map_recorder_node.py
racing_ws/src/racing_mission/resource/: racing_mission
racing_ws/src/racing_navigating/: package.xml  setup.cfg  setup.py
racing_ws/src/racing_navigating/config/: landmarks.yaml  nav2_params.yaml  nav2_params_cartographer.yaml  nav2_params_lidar.yaml  routes.yaml  slam_toolbox_depth.yaml  slam_toolbox_lidar.yaml  start_pose.yaml
racing_ws/src/racing_navigating/launch/: bringup_real.launch.py  depth_mapping.launch.py  lidar_mapping.launch.py  mission_start.launch.py  race_start.launch.py
racing_ws/src/racing_navigating/map/: map.yaml
racing_ws/src/racing_navigating/racing_navigating/: __init__.py  fixed_start_manager.py  route_executor.py  scan_merger.py
